--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(30px + 2vmin);
   color: white;
 }
 
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+.img {
+  width: 150px;
+  border-radius: 50%;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width:50vw;
+  height: 50px;
+  background-color: lemonchiffon;
+  margin-top: 50px;
 }
